--- a/Server/public/css/style.css
+++ b/Server/public/css/style.css
@@ -10109,7 +10109,7 @@ a.text-dark:focus {
   }
   .timeline .row::after {
     content: '\f004';
-    font-family: 'Font Awesome 5 Free';
+    font-family: 'Font Awesome 5 Free', 'sans-serif';
     font-weight: 400;
     position: absolute;
     top: calc(50% - 10px);
