--- a/Server/public/scss/style.scss
+++ b/Server/public/scss/style.scss
@@ -277,7 +277,7 @@ $border-width: 2px;
     
     .timeline .row::after {
         content: "\f004";
-        font-family: "Font Awesome 5 Free";
+        font-family: "Font Awesome 5 Free", sans-serif;
         font-weight: 400;
         position: absolute;
         top: calc(50% - 10px);
