--- a/Server/public/css/style.css
+++ b/Server/public/css/style.css
@@ -4674,7 +4674,7 @@ input[type='button'].btn-block {
 }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28194, 109, 188, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .navbar-dark .navbar-text {
@@ -10176,7 +10176,7 @@ a.text-dark:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #e47a2e;
+  color: var(--nav-text-color);
   background: #ffffff;
   font-size: 30px;
 }
