optimise: preload fonts, defer non critical css/js

--- a/Server/public/css/style.css
+++ b/Server/public/css/style.css
@@ -9877,7 +9877,7 @@ a.text-dark:focus {
 
 /********** Template CSS ************/
 .font-secondary {
-  font-family: 'Alex Brush', 'Great Vibes', cursive;
+  font-family: 'Alex Brush', cursive;
 }
 
 .btn-square {
