--- a/Server/public/css/style.css
+++ b/Server/public/css/style.css
@@ -10153,14 +10153,14 @@ a.text-dark:focus {
 
 .bg-gallery {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../optimised/img/gallery.webp), no-repeat center center;
+    url(/optimised/img/gallery.webp), no-repeat center center;
   background-size: cover;
 }
 
 @media (max-width: 2765px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2765px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2765px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10168,7 +10168,7 @@ a.text-dark:focus {
 @media (max-width: 2640px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2640px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2640px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10176,7 +10176,7 @@ a.text-dark:focus {
 @media (max-width: 2500px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2500px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2500px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10184,7 +10184,7 @@ a.text-dark:focus {
 @media (max-width: 2360px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2360px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2360px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10192,7 +10192,7 @@ a.text-dark:focus {
 @media (max-width: 2210px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2210px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2210px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10200,7 +10200,7 @@ a.text-dark:focus {
 @media (max-width: 2050px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-2050px.webp), no-repeat center center;
+      url(/optimised/img/gallery-2050px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10208,7 +10208,7 @@ a.text-dark:focus {
 @media (max-width: 1880px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-1880px.webp), no-repeat center center;
+      url(/optimised/img/gallery-1880px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10216,7 +10216,7 @@ a.text-dark:focus {
 @media (max-width: 1680px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-1680px.webp), no-repeat center center;
+      url(/optimised/img/gallery-1680px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10224,7 +10224,7 @@ a.text-dark:focus {
 @media (max-width: 1470px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-1470px.webp), no-repeat center center;
+      url(/optimised/img/gallery-1470px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10232,7 +10232,7 @@ a.text-dark:focus {
 @media (max-width: 1210px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-1210px.webp), no-repeat center center;
+      url(/optimised/img/gallery-1210px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10240,7 +10240,7 @@ a.text-dark:focus {
 @media (max-width: 880px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-880px.webp), no-repeat center center;
+      url(/optimised/img/gallery-880px.webp), no-repeat center center;
     background-size: cover;
   }
 }
@@ -10248,7 +10248,7 @@ a.text-dark:focus {
 @media (max-width: 300px) {
   .bg-gallery {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(../optimised/img/gallery-300px.webp), no-repeat center center;
+      url(/optimised/img/gallery-300px.webp), no-repeat center center;
     background-size: cover;
   }
 }
